--- a/style.css
+++ b/style.css
@@ -1,7 +1,19 @@
+body {
+  height: 100%;
+  border: 5px red solid;
+  padding: 20px;
+}
+
 #container {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  border: 2px solid seagreen;
+  padding: 20px;
 }
 
 .gridDiv {
+  display: flex;
   display: grid;
   grid-template-columns: repeat(16, 30px [col-start]);
   justify-content: center;
