--- a/style.css
+++ b/style.css
@@ -1,29 +1,23 @@
-body {
-  height: 100%;
-  border: 5px red solid;
-  padding: 20px;
-}
-
 #container {
-  display: flex;
-  align-items: center;
-  align-content: center;
   border: 2px solid seagreen;
   padding: 20px;
+  gap: 20px;
 }
 
 .gridDiv {
-  display: flex;
   display: grid;
   grid-template-columns: repeat(16, 30px [col-start]);
-  justify-content: center;
-  align-items: center;
   border: 1px blue solid;
   width: auto;
-  flex: 1;
 }
 .boxElements {
   border: 1px solid sandybrown;
+  height: 30px;
+  width: 30px;
+}
+#reverse,#gridNumberButton {
+  margin: 5px;
+  border: 5px solid red;
   height: 30px;
   width: 30px;
 }
